--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 .bg {
 	background-color: #f7e5e5 !important;
 }
+button.bg:hover {
+	background-color: #e0cfcf !important;
+}
 .banner_taital {
 	width: 100%;
 	font-size: 90px;
@@ -8,4 +11,40 @@
 	line-height: 90px;
 	padding-top: 20px;
 	font-family: "Great Vibes", cursive;
+}
+.title {
+	font-size: 50px;
+	color: #000;
+	line-height: 90px;
+	padding-top: 20px;
+	font-family: "Great Vibes", cursive;
+}
+.cat_img {
+	height: 300px;
+	transition: 0.5s;
+}
+.cat_card {
+	width: 400px;
+	overflow: hidden;
+	position: relative;
+	background-color: black;
+}
+
+.cat_card:hover .cat_img {
+	opacity: 0.5;
+}
+.cat_name {
+	position: absolute;
+	color: #ffffff;
+	text-transform: capitalize;
+	font-family: "Lato", sans-serif;
+	font-size: 20px;
+	bottom: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+	opacity: 0;
+	transition: 0.5s;
+}
+.cat_card:hover .cat_name {
+	opacity: 1;
 }
